--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
 		</ul>
 	</nav>
 <!--NAVBAR ENDS-->
-    <div class="align-self-center">TWITCH.TV/JAVIBEAT</div>
+    <div class="justify-content-center">TWITCH.TV/JAVIBEAT</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>   
   </body>
 </html>
