--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!--BODY-->
   <body>
 <!--NAVBAR-->
-	<nav class="navbar justify-content-center bg-light">
+	<nav class="navbar sticky-top justify-content-center bg-light">
 		<ul class="nav">
   			<li class="nav-item">
     			<a class="nav-link" href="#">Link</a>
