--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 		</ul>
 	</nav>
 <!--NAVBAR ENDS-->
+<header class="masthead">
+	<div class="container">
+		<div class="masthead-subheading">Welcome To Our Studio!</div>
+		<div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
+		<a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+	</div>
+</header>
     <div class="justify-content-center">TWITCH.TV/JAVIBEAT</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>   
   </body>
