--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</ul>
 	</nav>
 <!--NAVBAR ENDS-->
-<div class="container-xxl">
+<div class="container-fluid">
 	<div class="row">
 	  <div class="col">
 		
