--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   </head>
 <!--BODY-->
-  <body>
+  <body class="m-© vh-100 row justify-content-center align-items-center">
 <!--NAVBAR-->
 	<nav class="navbar sticky-top justify-content-center bg-light">
 		<ul class="nav">
@@ -23,7 +23,7 @@
 		</ul>
 	</nav>
 <!--NAVBAR ENDS-->
-<div class="container-fluid">
+<div class="col-auto bg-danger p-5 text-center">
 		<div class="justify-content-center">TWITCH.TV/JAVIBEAT</div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>   
