--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   </head>
 <!--BODY-->
-  <body class="m-© vh-100 row justify-content-center align-items-center">
+  <body class="justify-content-center align-items-center">
 <!--NAVBAR-->
 	<nav class="navbar sticky-top justify-content-center bg-light">
 		<ul class="nav">
