--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</ul>
 	</nav>
 <!--NAVBAR ENDS-->
-<div class="col-auto bg-danger p-5 text-center">
+<div class="col-auto p-5 text-center">
 		<div class="justify-content-center">TWITCH.TV/JAVIBEAT</div>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>   
