--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!--BODY-->
   <body class="justify-content-center align-items-center">
 <!--NAVBAR-->
-	<nav class="navbar sticky-top justify-content-center bg-#6441a5">
+	<nav class="navbar sticky-top justify-content-center color:#6441a5">
 		<ul class="nav">
   			<li class="nav-item">
     			<a class="nav-link" href="#">Link</a>
