--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Twitch Javibeat</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <style>
+        /* Modify the background color */
+         
+        .navbar-custom {
+            background-color: #6441a5;
+        }
+    </style>
   </head>
 <!--BODY-->
   <body class="justify-content-center align-items-center">
 <!--NAVBAR-->
-	<nav class="navbar sticky-top justify-content-center color-#6441a5">
+	<nav class="navbar sticky-top justify-content-center navbar-custom">
 		<ul class="nav">
   			<li class="nav-item">
     			<a class="nav-link" href="#">Link</a>
