--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </style>
   </head>
 <!--BODY-->
-  <body class="justify-content-center align-items-center">
+  <body class="justify-content-center">
 <!--NAVBAR-->
 	<nav class="navbar sticky-top justify-content-center navbar-custom">
 		<div class="container-fluid">
@@ -23,13 +23,13 @@
 			  </a>
 			  <ul>
 				<li class="nav-item">
-				  <a class="nav-link active" aria-current="page" href="#">Home</a>
+				  <a class="nav-link" href="#">Home</a>
 				</li>
 				<li class="nav-item">
-				  <a class="nav-link" href="#">Features</a>
+				  <a class="nav-link" href="#">Sorteos</a>
 				</li>
 				<li class="nav-item">
-				  <a class="nav-link" href="#">Pricing</a>
+				  <a class="nav-link" href="#">Recomendados</a>
 				</li>
 			  </ul>
 		  </div>
