--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--BODY-->
   <body class="justify-content-center">
 <!--NAVBAR-->
-	<nav class="navbar-custom sticky-top justify-content-center">
+	<nav class="navbar sticky-top justify-content-center navbar-custom">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">
 				<img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-text-top">
