--- a/index.html
+++ b/index.html
@@ -19,23 +19,10 @@
 	<nav class="navbar sticky-top justify-content-center navbar-custom">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">
-				<img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-text-top">
+			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-text-top">
+			  Bootstrap
 			</a>
-				  <ul class="navbar-nav">
-					<li class="nav-item">
-					  <a class="nav-link active" aria-current="page" href="#">Home</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="#">Features</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link" href="#">Pricing</a>
-					</li>
-					<li class="nav-item">
-					  <a class="nav-link disabled">Disabled</a>
-					</li>
-				  </ul>
-		</div>
+		  </div>
 	</nav>
 <!--NAVBAR ENDS-->
 <div class="col-auto p-5 text-center">
