--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<a class="navbar-brand" href="#">
 			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-text-top">
 			</a>
-			
+			<div>
 				<ul class="navbar-nav">
 				  <li class="nav-item">
 					<a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -36,7 +36,7 @@
 					<a class="nav-link disabled">Disabled</a>
 				  </li>
 				</ul>
-			
+			  </div>
 		  </div>
 	</nav>
 <!--NAVBAR ENDS-->
