--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 			<a class="navbar-brand" href="#">
 			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-text-top">
 			</a>
-			<div>
-				<ul class="navbar-nav">
-				  <li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Home</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-link" href="#">Features</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-link" href="#">Pricing</a>
-				  </li>
-				  <li class="nav-item">
-					<a class="nav-link disabled">Disabled</a>
-				  </li>
-				</ul>
-			  </div>
+		</div>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+			  <li class="nav-item">
+				<a class="nav-link active" aria-current="page" href="#">Home</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">Features</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="#">Pricing</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link disabled">Disabled</a>
+			  </li>
+			</ul>
 		  </div>
 	</nav>
 <!--NAVBAR ENDS-->
