--- a/index.html
+++ b/index.html
@@ -22,22 +22,12 @@
 			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-text-top">
 			</a>
 		</div>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-			  <li class="nav-item">
-				<a class="nav-link active" aria-current="page" href="#">Home</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="#">Features</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link" href="#">Pricing</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link disabled">Disabled</a>
-			  </li>
-			</ul>
-		</div>
+		<nav class="nav">
+			<a class="nav-link active" aria-current="page" href="#">Active</a>
+			<a class="nav-link" href="#">Link</a>
+			<a class="nav-link" href="#">Link</a>
+			<a class="nav-link disabled">Disabled</a>
+		  </nav>
 	</nav>
 <!--NAVBAR ENDS-->
 <div class="col-auto p-5 text-center">
