--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-text-top">
 			</a>
 			<nav class="nav">
-				<a class="nav-link active" aria-current="page" href="#">Active</a>
-				<a class="nav-link" href="#">Link</a>
-				<a class="nav-link" href="#">Link</a>
-				<a class="nav-link disabled">Disabled</a>
+				<a class="nav-link active" aria-current="page" href="#">Inicio</a>
+				<a class="nav-link" href="#">Sorteos</a>
+				<a class="nav-link" href="#">Recomendados</a>
+				<a class="nav-link" href="#">Encuestas</a>
 			  </nav>
 		</div>
 	</nav>
