--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
          
         .navbar-custom {
             background-color: #6441a5;
+		.container-fluid header nav ul li a {
+  			color: white;
         }
     </style>
   </head>
