--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          
         .navbar-custom {
             background-color: #6441a5;
-		.container-fluid header nav ul li a {
+		.container-fluid header nav ul li a
   			color: white;
         }
     </style>
