--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		}	
 
 		.container-fluid {
-			header nav ul li a color: white;
+			nav ul li a color: white;
         }
     </style>
   </head>
