--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Twitch Javibeat</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <style>
-        /* Modify the background color */
-         
         .navbar-custom {
             background-color: #6441a5;
 		}
@@ -16,17 +14,17 @@
 <!--BODY-->
   <body class="justify-content-center">
 <!--NAVBAR-->
-	<nav class="navbar sticky-top justify-content-center navbar-custom">
-		<div class="container-fluid">
+	<nav class="navbar justify-content-center sticky-top navbar-custom">
+		<div class="container-fluid justify-content-center">
 			<a class="navbar-brand" href="#">
-			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-text-top">
+			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-							text-top">
 			</a>
 			<nav class="nav">
 				<a class="nav-link active" aria-current="page" href="#">Inicio</a>
 				<a class="nav-link" href="#">Sorteos</a>
 				<a class="nav-link" href="#">Recomendados</a>
 				<a class="nav-link" href="#">Encuestas</a>
-			  </nav>
+			</nav>
 		</div>
 	</nav>
 <!--NAVBAR ENDS-->
