--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body class="justify-content-center">
 <!--NAVBAR-->
 	<nav class="navbar justify-content-center sticky-top navbar-custom">
-		<div class="container-fluid justify-content-center">
+		<div class="container-fluid">
 			<a class="navbar-brand" href="#">
 			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-							text-top">
 			</a>
