--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<nav class="navbar justify-content-center sticky-top navbar-custom">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">
-			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-							text-top">
+			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align 			  text-top">
 			</a>
 			<nav class="nav">
 				<a class="nav-link active" aria-current="page" href="#">Inicio</a>
