--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
   </head>
 <!--BODY-->
-  <body class="justify-content-center">
+  <body>
 <!--NAVBAR-->
 	<nav class="navbar justify-content-center sticky-top navbar-custom">
 		<div class="container-fluid">
