--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         .navbar-custom {
             background-color: #6441a5;
 		}
+		.nav {
+            text-decoration-color: #ffffff;
+		}
     </style>
   </head>
 <!--BODY-->
