--- a/index.html
+++ b/index.html
@@ -9,24 +9,21 @@
         .navbar-custom {
             background-color: #6441a5;
 		}
-		.nav {
-            text-decoration-color: #ffffff;
-		}
     </style>
   </head>
 <!--BODY-->
   <body>
 <!--NAVBAR-->
-	<nav class="navbar justify-content-center sticky-top navbar-custom">
+	<nav class="navbar sticky-top navbar-custom">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">
 			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align 			  text-top">
 			</a>
 			<nav class="nav">
-				<a class="nav-link active" aria-current="page" href="#">Inicio</a>
-				<a class="nav-link" href="#">Sorteos</a>
-				<a class="nav-link" href="#">Recomendados</a>
-				<a class="nav-link" href="#">Encuestas</a>
+				<a class="nav-link link-light active" aria-current="page" href="#">Inicio</a>
+				<a class="nav-link link-light" href="#">Sorteos</a>
+				<a class="nav-link link-light" href="#">Recomendados</a>
+				<a class="nav-link link-light" href="#">Encuestas</a>
 			</nav>
 		</div>
 	</nav>
