--- a/index.html
+++ b/index.html
@@ -19,12 +19,20 @@
 			<a class="navbar-brand" href="#">
 			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align 			  text-top">
 			</a>
-			<nav class="nav">
-				<a class="nav-link link-light active" aria-current="page" href="#">Inicio</a>
-				<a class="nav-link link-light" href="#">Sorteos</a>
-				<a class="nav-link link-light" href="#">Recomendados</a>
-				<a class="nav-link link-light" href="#">Encuestas</a>
-			</nav>
+				<ul class="nav justify-content-center">
+  				<li class="nav-item">
+    			<a class="nav-link link-light active" aria-current="page" href="#">Inicio</a>
+  				</li>
+ 				<li class="nav-item">
+    			<a class="nav-link link-light" href="#">Sorteos</a>
+  				</li>
+  				<li class="nav-item">
+   				<a class="nav-link link-light" href="#">Recomendados</a>
+  				</li>
+  				<li class="nav-item">
+   				<a class="nav-link link-light" href="#">Encuestas</a>
+  				</li>
+				</ul>
 		</div>
 	</nav>
 <!--NAVBAR ENDS-->
