--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <!--BODY-->
   <body>
 <!--NAVBAR-->
-	<nav class="navbar sticky-top navbar-custom">
+	<nav class="navbar justify-content-center sticky-top navbar-custom">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#">
 			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align 			  text-top">
 			</a>
-				<ul class="nav justify-content-center">
+				<ul class="nav">
   				<li class="nav-item">
     			<a class="nav-link link-light active" aria-current="page" href="#">Inicio</a>
   				</li>
