--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <!--BODY-->
   <body>
 <!--NAVBAR-->
-		<div class="container-fluid">
+		<nav class="navbar-custom">
+			<div class="container-fluid">
 			<a class="navbar-brand" href="#">
 			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align 			  text-top">
 			</a>
-				<ul class="nav justify-content-center navbar-custom">
+				<ul class="nav justify-content-center">
   				<li class="nav-item">
     			<a class="nav-link link-light active" aria-current="page" href="#">Inicio</a>
   				</li>
@@ -32,7 +33,8 @@
    				<a class="nav-link link-light" href="#">Encuestas</a>
   				</li>
 				</ul>
-		</div>
+			</div>
+		</nav>
 	
 <!--NAVBAR ENDS-->
 <div class="col-auto p-5 text-center">
