--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
 <!--BODY-->
   <body>
 <!--NAVBAR-->
-		<nav class="navbar-custom">
-			<div class="container-fluid">
+<div class="container navbar-custom">
+  <div class="row">
+    <div class="col">
+      <div class="container-fluid">
 			<a class="navbar-brand" href="#">
-			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align 			  text-top">
-			</a>
-				<ul class="nav justify-content-center">
+			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align 			  text-top"></a>
+			</div>
+    </div>
+    <div class="col">
+      <ul class="nav justify-content-center">
   				<li class="nav-item">
     			<a class="nav-link link-light active" aria-current="page" href="#">Inicio</a>
   				</li>
@@ -33,8 +37,12 @@
    				<a class="nav-link link-light" href="#">Encuestas</a>
   				</li>
 				</ul>
-			</div>
-		</nav>
+    </div>
+    <div class="col">
+      
+    </div>
+  </div>
+</div>
 	
 <!--NAVBAR ENDS-->
 <div class="col-auto p-5 text-center">
