--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align 			  text-top"></a>
 			</div>
     </div>
-    <div class="col col-6">
+    <div class="col-6">
       <ul class="nav justify-content-center">
   				<li class="nav-item">
     			<a class="nav-link link-light active" aria-current="page" href="#">Inicio</a>
