--- a/index.html
+++ b/index.html
@@ -14,36 +14,13 @@
 <!--BODY-->
   <body>
 <!--NAVBAR-->
-<div class="container navbar-custom">
-  <div class="row">
-    <div class="col">
-      <div class="container-fluid">
-			<a class="navbar-brand" href="#">
-			  <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align 			  text-top"></a>
-			</div>
-    </div>
-    <div class="col-6">
-      <ul class="nav justify-content-center">
-  				<li class="nav-item">
-    			<a class="nav-link link-light active" aria-current="page" href="#">Inicio</a>
-  				</li>
- 				<li class="nav-item">
-    			<a class="nav-link link-light" href="#">Sorteos</a>
-  				</li>
-  				<li class="nav-item">
-   				<a class="nav-link link-light" href="#">Recomendados</a>
-  				</li>
-  				<li class="nav-item">
-   				<a class="nav-link link-light" href="#">Encuestas</a>
-  				</li>
-				</ul>
-    </div>
-    <div class="col">
-      
-    </div>
+  <nav class="navbar navbar-custom">
+  <div class="container">
+    <a class="navbar-brand" href="#">
+      <img src="img/favicon.PNG" alt="" width="30" height="24">
+    </a>
   </div>
-</div>
-	
+</nav>
 <!--NAVBAR ENDS-->
 <div class="col-auto p-5 text-center">
 		<div class="justify-content-center">TWITCH.TV/JAVIBEAT</div>
