--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-custom">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="img/favicon.PNG" alt="" width="30" height="24">
+      <img src="Img/favicon.PNG" alt="" width="30" height="24">
     </a>
   </div>
 </nav>
