--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--NAVBAR-->
   <nav class="navbar navbar-custom">
     <a class="navbar-brand" href="#">
-      <img src="img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-text-top">
+      <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-text-top">
     </a>
   </nav>
 <!--NAVBAR ENDS-->
