--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 <!--BODY-->
   <body>
 <!--NAVBAR-->
-  <nav class="navbar navbar-custom">
-    <div class="container-fluid">
+  <nav class="navbar navbar-custom sticky-top">
     <a class="navbar-brand" href="#">
       <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-text-top">
     </a>
-  </div>
   </nav>
 <!--NAVBAR ENDS-->
 <div class="col-auto p-5 text-center">
