--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
   <body>
 <!--NAVBAR-->
   <nav class="navbar navbar-custom sticky-top">
+    <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-text-top">
     </a>
+    </div>
   </nav>
 <!--NAVBAR ENDS-->
 <div class="col-auto p-5 text-center">
