--- a/index.html
+++ b/index.html
@@ -20,6 +20,20 @@
       <img src="Img/favicon.PNG" alt="" width="30" height="24" class="d-inline-block align-text-top">
     </a>
     </div>
+    <ul class="nav justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="#">Active</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled">Disabled</a>
+      </li>
+    </ul>
   </nav>
 <!--NAVBAR ENDS-->
 <div class="col-auto p-5 text-center">
