--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     </a>
     <ul class="nav justify-content-center">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Active</a>
+        <a class="nav-link active link-light" aria-current="page" href="#">Inicio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link link-light" href="#">Sorteos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link link-light" href="#">Recomendados</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled">Disabled</a>
+        <a class="nav-link link-light" href="#">Votaciones</a>
       </li>
     </ul>
     </div>
